# hil-serl

./: .gitignore  LICENSE  README.md  requirements.txt
docs/: franka_walkthrough.md
examples/: record_demos.py  record_demos_sim.py  record_success_fail.py  record_success_fail_sim.py  train_bc.py  train_hgdagger.py  train_reward_classifier.py  train_rlpd copy.py  train_rlpd.py  train_rlpd_sim.py
examples/experiments/: config.py  mappings.py
examples/experiments/astribot_test/: config.py  run_actor.sh  run_learner.sh  wrapper.py
examples/experiments/banana_pick_place/: config.py  run_actor.sh  run_learner.sh  wrapper.py
examples/experiments/egg_flip/: config.py  run_actor.sh  run_learner.sh  wrapper.py
examples/experiments/object_handover/: config.py  run_actor.sh  run_learner.sh  wrapper.py
examples/experiments/pick_cube_sim/: config.py  run_actor.sh  run_learner.sh  wrapper.py
examples/experiments/ram_insertion/: config.py  run_actor.sh  run_learner.sh  wrapper.py
examples/experiments/usb_pickup_insertion/: config.py  run_actor.sh  run_learner.sh  wrapper.py
franka_sim/: README.md  requirements.txt
franka_sim/franka_sim/: __init__.py
franka_sim/franka_sim/envs/: panda_pick_gym_env.py
franka_sim/franka_sim/test/: MUJOCO_LOG.TXT  test_gym_env_human.py  test_gym_env_joystick.py
franka_sim/franka_sim/utils/: viewer_utils.py
serl_launcher/: requirements.txt  setup.py
serl_launcher/serl_launcher/agents/: __init__.py
serl_launcher/serl_launcher/common/: common.py  encoding.py  evaluation.py
serl_launcher/serl_launcher/data/: data_store.py  memory_efficient_replay_buffer.py  replay_buffer.py
serl_launcher/serl_launcher/networks/: actor_critic_nets.py  lagrange.py  reward_classifier.py
serl_launcher/serl_launcher/utils/: action_combine.py  launcher.py  logging_utils.py  tools.py  train_utils.py
serl_launcher/serl_launcher/vision/: __init__.py  data_augmentations.py  resnet_v1.py
serl_launcher/serl_launcher/wrappers/: chunking.py  front_camera_wrapper.py  serl_obs_wrappers.py  video_wrapper.py
serl_robot_infra/: README.md
serl_robot_infra/astribot_env/envs/: __init__.py  astribot_env.py
serl_robot_infra/astribot_env/examples/: 100-read_property.py  101-get_joint_states.py  102-get_cartesian_states.py  103-move_to_joint_position.py  104-set_joint_position.py  105-set_joint_position_direct.py  106-set_joint_velocity.py  107-move_to_cartesian_pose.py  108-set_cartesian_pose.py  109-effector_open_close.py  201-head_follow.py  202-chassis_joy_control.py  203-forward_kinematics.py  204-inverse_kinematics.py  205-move_joints_waypoints.py  206-move_cartesian_waypoints.py  207-traj_replay.py  208-get_closest_dist.py  209-arm_gravity_compensation.py  210-whole_body_control_test.py  211-chassis_joy_control_with_ultrasonic_obstacle_avoidance.py  300-get_images.py  301-get_lidar_scan.py  302-get_and_play_audio.py  999-stop_robot.py  README.md  sdk_documentation.md  sdk使用文档.md
serl_robot_infra/egg_flip_controller/: CMakeLists.txt  egg_flip_controller_plugin.xml  package.xml
serl_robot_infra/egg_flip_controller/config/: egg_flip_controller.yaml
serl_robot_infra/egg_flip_controller/include/egg_flip_controller/: cartesian_wrench_controller.h  pseudo_inversion.h
serl_robot_infra/egg_flip_controller/launch/: wrench.launch
serl_robot_infra/egg_flip_controller/src/: cartesian_wrench_controller.cpp
serl_robot_infra/franka_env/camera/: multi_video_capture.py  rs_capture.py  video_capture.py
serl_robot_infra/franka_env/envs/: __init__.py  dual_franka_env.py  franka_env.py  franka_wrench_env.py  relative_env.py  wrappers.py
serl_robot_infra/franka_env/spacemouse/: pyspacemouse.py  spacemouse_expert.py  spacemouse_test.py
serl_robot_infra/robot_servers/: dual_franka_server.py  franka_eggflip_server.py  franka_gripper_server.py  franka_server.py  franka_wrench_server.py  launch_left_server.sh  launch_right_eggflip_server.sh  launch_right_server.sh  launch_right_wrench_server.sh  robotiq_gripper_server.py
serl_robot_infra/serl_robot_infra.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+39 files in other folders)
